--- a/CustomMetricsSample/Dockerfile
+++ b/CustomMetricsSample/Dockerfile
@@ -1,19 +1,11 @@
-FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
-WORKDIR /app
-EXPOSE 80
-
 FROM microsoft/dotnet:2.1-sdk AS build
-WORKDIR /src
-COPY ["CustomMetricsSample/CustomMetricsSample.csproj", "CustomMetricsSample/"]
-RUN dotnet restore "CustomMetricsSample/CustomMetricsSample.csproj"
-COPY . .
-WORKDIR "/src/CustomMetricsSample"
-RUN dotnet build "CustomMetricsSample.csproj" -c Release -o /app
-
 FROM build AS publish
+WORKDIR /src
+COPY . .
+RUN dotnet build "CustomMetricsSample.csproj" -c Release -o /app
 RUN dotnet publish "CustomMetricsSample.csproj" -c Release -o /app
 
-FROM base AS final
+FROM microsoft/dotnet
 WORKDIR /app
 COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "CustomMetricsSample.dll"]
